--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,15 @@
             box-sizing: border-box;
         }
 
+        html {
+            overflow: hidden;
+            width: 100%;
+        }
+
         body {
             font-family: 'MS Sans Serif', Arial, sans-serif;
             overflow: hidden;
+            width: 100%;
             background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100"><defs><filter id="noise"><feTurbulence baseFrequency="0.9" numOctaves="4"/><feColorMatrix values="0 0 0 0 0.4, 0 0 0 0 0.6, 0 0 0 0 0.9, 0 0 0 0.3 0"/></filter></defs><rect width="100" height="100" filter="url(%23noise)"/></svg>'),
                         linear-gradient(180deg, #1084d0 0%, #0f6bb5 50%, #0e5a9e 100%);
             background-size: 200px, 100%;
@@ -848,6 +854,7 @@
             /* Hide desktop icons - use menu only */
             .desktop {
                 height: calc(100dvh - 44px);
+                padding: 0;
             }
 
             .desktop .icon {
